--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "prettier": "^3.5.3"
   },
   "devDependencies": {
+    "axios": "^1.8.3",
     "md5": "^2.3.0"
   }
 }
